--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   google_fonts: ^4.0.4
   flutter_svg: ^1.0.3
   simple_ripple_animation: ^0.0.3
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
